💄🐛fix(styling):  fix jump when no vertical scrollbar
Not really a bug but... it bothered me.

--- a/src/app.scss
+++ b/src/app.scss
@@ -73,7 +73,10 @@ body {
   background-attachment: fixed;
   color: var(--win98-black);
   overflow-x: hidden;
-  overflow-y: auto;
+}
+
+html {
+  scrollbar-gutter: stable;
 }
 
 main {
